--- a/src/tokens/retheme/base-theme/theme-tokens.css
+++ b/src/tokens/retheme/base-theme/theme-tokens.css
@@ -123,29 +123,29 @@
 
 
      /* B A S E  T H E M E  V A R I A B L E S  */
-     --text-color-01: var(--neutral-darkest);
-     --text-color-02: var(--neutral);
-     --text-color-03: var(--neutral02-light);
+     --text-color-01: #001820;
+     --text-color-02: #0B0D0E;
+     --text-color-03: #797979;
      --text-color-04: var(--neutral-00);
      --text-color-05: var(--info-dark);
      --text-color-06: var(--error-darker);
      --text-color-07: var(--neutral-00);
      --icon-color-01: var(--primary);
      --icon-color-02: var(--secondary);
-     --icon-color-03: var(--neutral02-darkest);
-     --icon-color-04: var(--neutral);
+     --icon-color-03: #001820;
+     --icon-color-04: #0B0D0E;
      --icon-color-05: var(--semantic-dark);
      --icon-color-06: var(--neutral-00);
      --icon-color-07: var(--messaging-dark);
      --icon-color-08: var(--neutral02-lighter);
-     --border-color-01: var(--neutral01-lighter);
+     --border-color-01: #EFEFEF;
      --border-color-02: var(--neutral-00);
      --border-color-03: var(--neutral01-lightest);
-     --border-color-04: var(--neutral01-dark);
+     --border-color-04: #222222;
      --border-color-05: var(--error-dark);
      --border-color-06: var(--neutral02-lighter);
-     --ui-background-01: var(--neutral-00);
-     --ui-background-02: var(--neutral01-lightest);
+     --ui-background-01: #F9F9F9;
+     --ui-background-02: #EEEEEE;
      --ui-background-03: var(--info-tint);
      --disabled-content-color: var(--neutral01-darkest);
      --disabled-border-color: var(--neutral-01);
@@ -263,8 +263,8 @@
     --interactive-border-interactive-border: var(--border-color-04);
     --interactive-border-interactive-border-error: var(--border-color-05);
     --interactive-control-content-01: var(--interactive-states-01-default);
-    --interactive-control-02: var(--interactive-states-01);
-    --interactive-control-04: var(--interactive-states-03-default);
+    --interactive-control-02: #222222;
+    --interactive-control-04: var(--secondary-tint);
     --interactive-container: var(--interactive-states-04-default);
     --interactive-utility-focus-border-opacity: 0;
     --interactive-utility-inner-focus-border: #FFFFFF00;
@@ -460,15 +460,15 @@
         --interactive-overlay-01: #FFFFFF51;
         --interactive-overlay-02: #1E2C3814;
         --interactive-overlay-03: #FFFFFF28;
-        --interactive-overlay-04: var(--ui-background-03);
+        --interactive-overlay-04: var(--secondary-tint);
         --interactive-overlay-semantic: var(--semantictint);
         --interactive-overlay-messaging: var(--messaging-tint);
         --interactive-border-interactive-border: var(--border-color-06);
         --interactive-border-interactive-border-error: var(--error);
         --interactive-control-content-01: var(--info-tint);
-        --interactive-control-02: var(--interactive-states-03);
-        --interactive-control-04: var(--interactive-states-03-hover);
-        --interactive-container: var(--ui-background-03);
+        --interactive-control-02: #393939;
+        --interactive-control-04: var(--secondary-lightest);
+        --interactive-container: var(--ui-background-02);
         --interactive-utility-focus-border-opacity: 0;
         --interactive-utility-inner-focus-border: #FFFFFF00;
         --interactive-utility-outer-focus-border: #FFFFFF00;
@@ -479,18 +479,18 @@
         --interactive-overlay-01: #FFFFFF51;
         --interactive-overlay-02: #1E2C3814;
         --interactive-overlay-03: #FFFFFF28;
-        --interactive-overlay-04: var(--ui-background-03);
+        --interactive-overlay-04: var(--secondary-tint);
         --interactive-overlay-semantic: var(--semantictint);
         --interactive-overlay-messaging: var(--messaging-tint);
         --interactive-border-interactive-border: var(--border-color-06);
         --interactive-border-interactive-border-error: var(--error);
         --interactive-control-content-01: var(--info-tint);
-        --interactive-control-02: var(--interactive-states-03);
-        --interactive-control-04: var(--interactive-states-03-hover);
-        --interactive-container: var(--ui-background-03);
+        --interactive-control-02: #393939;
+        --interactive-control-04: var(--secondary-lightest);
+        --interactive-container: var(--ui-background-02);
         --interactive-utility-focus-border-opacity: 100;
         --interactive-utility-inner-focus-border: var(--border-color-02);
-        --interactive-utility-outer-focus-border: var(--interactive-states-03);
+        --interactive-utility-outer-focus-border: var(--secondary);
         --interactive-utility-display-on-interaction: var(--icon-color-04);
     }
 
@@ -498,15 +498,15 @@
         --interactive-overlay-01: #1E2C3805;
         --interactive-overlay-02: #1E2C381E;
         --interactive-overlay-03: #1E2C381E;
-        --interactive-overlay-04: var(--info-lightest);
+        --interactive-overlay-04: var(--secondary-lightest);
         --interactive-overlay-semantic: var(--semantic-lightest);
         --interactive-overlay-messaging: var(--messaging-lightest);
         --interactive-border-interactive-border: var(--border-color-06);
         --interactive-border-interactive-border-error: var(--error-darker);
         --interactive-control-content-01: var(--info-lightest);
-        --interactive-control-02: var(--interactive-states-02);
-        --interactive-control-04: var(--interactive-states-03-active);
-        --interactive-container: var(--info-lightest);
+        --interactive-control-02: #000000;
+        --interactive-control-04: var(--secondary-lighter);
+        --interactive-container: #B3B3B4;
         --interactive-utility-focus-border-opacity: 0;
         --interactive-utility-inner-focus-border: #FFFFFF00;
         --interactive-utility-outer-focus-border: #FFFFFF00;
