--- a/src/tokens/retheme/components/button.css
+++ b/src/tokens/retheme/components/button.css
@@ -3,19 +3,20 @@
     /* L1: Base Button Tokens */ 
 
     --button-content-01: var(--text-color-04);
-    --button-content-02: var(--text-color-05);
+    --button-content-02: var(--text-color-01);
     --button-border-color-01: #FFFFFF00;
     --button-border-radius: 0;
-    --button-border-color-02: var(--border-color-08);
+    --button-border-color-02: var(--border-color-04);
     --button-overlay-01: var(--interactive-overlay-04);
     --button-background-color-01: var(--interactive-control-02);
+    --button-background-color-02: var(--interactive-container);
 
     /* L2: Button Size Dependent */ 
 
     --icon-button-width: var(--size-large);
     --icon-button-icon-size: 14;
-    --button-height: var(--size-large);
-    --button-border-radius: var(--border-radius-round);
+    --button-height: var(--value-large);
+    --button-border-radius: var(--border-radius-x-small);
     --button-font-size: var(--font-size-075);
     --button-icon-size: var(--font-size-050);
     --button-font-weight: var(--font-weight-300);
@@ -32,6 +33,7 @@
     --button-overlay: #FFFFFF00;
     --button-background-color: var(--button-background-color-01);
     --button-icon-color: var(--button-content-01);
+    --button-border-weight: 0;
 
 
 }
@@ -44,7 +46,7 @@
     --icon-button-width: var(--size-medium);
     --icon-button-icon-size: 12;
     --button-height: var(--size-medium);
-    --button-border-radius: var(--border-radius-round);
+    --button-border-radius: var(--border-radius-x-small);
     --button-font-size: var(--font-size-050);
     --button-icon-size: var(--font-size-050);
     --button-font-weight: var(--font-weight-300);
@@ -58,17 +60,17 @@
 
 .large { 
     --icon-button-width: var(--size-x-large);
---icon-button-icon-size: 16;
---button-height: var(--size-x-large);
---button-border-radius: var(--border-radius-round);
---button-font-size: var(--font-size-100);
---button-icon-size: var(--font-size-050);
---button-font-weight: var(--font-weight-300);
---button-gap: var(--space-small);
---button-padding-right: var(--space-base);
---button-padding-left: var(--space-small);
---button-padding-vertical: var(--space-small);
---button-padding-horizontal: var(--space-medium);
+    --icon-button-icon-size: 16;
+    --button-height: var(--size-x-large);
+    --button-border-radius: var(--border-radius-x-small);
+    --button-font-size: var(--font-size-100);
+    --button-icon-size: var(--font-size-050);
+    --button-font-weight: var(--font-weight-300);
+    --button-gap: var(--space-small);
+    --button-padding-right: var(--space-base);
+    --button-padding-left: var(--space-small);
+    --button-padding-vertical: var(--space-small);
+    --button-padding-horizontal: var(--space-medium);
 }
 
 /*-------*/ 
@@ -79,15 +81,17 @@
     --button-text-color: var(--button-content-02);
     --button-border-color: var(--button-border-color-02);
     --button-overlay: var(--button-overlay-01);
-    --button-background-color: var(--button-overlay-01);
+    --button-background-color: var(--button-background-color-02);
     --button-icon-color: var(--button-content-02);
+    --button-border-weight: 1.5;
 }
 
 .ghost{
     --button-text-color: var(--button-content-02);
     --button-border-color: var(--button-border-color-01);
     --button-overlay: var(--button-overlay-01);
-    --button-background-color: var(--button-overlay);
+    --button-background-color: var(--button-background-color-02);
     --button-icon-color: var(--button-content-02);
+    --button-border-weight: 0;
 }
 
