added poc2 with tokens, theme switcher

--- a/src/tokens/poc2/mui/palette.css
+++ b/src/tokens/poc2/mui/palette.css
@@ -1,140 +1,139 @@
-:root{
-    --text-primary: #000000DD;
---text-secondary: var(--grey-800);
---text-disabled: var(--grey-a200);
---primary-main: var(--blue-500);
---primary-dark: var(--blue-600);
---primary-light: var(--blue-400);
---primary-contrast: #FFFFFF;
---primary-_states-hover: var(--blue-50);
---primary-_states-selected: var(--blue-100);
---primary-_states-focus: var(--blue-50);
---primary-_states-focusvisible: var(--blue-50);
---primary-_states-outlinedborder: var(--blue-600);
---primary-_states-focusvisibleouterborder: var(--primary-main);
---primary-_states-focusvisibleinnerborder: var(--common-white_states-main);
---text-_states-hover: #0000000A;
---text-_states-selected: #00000014;
---text-_states-focus: #0000001E;
---text-_states-focusvisible: #0000004C;
---secondary-main: var(--purple-500);
---secondary-dark: var(--purple-700);
---secondary-light: var(--purple-300);
---secondary-contrast: #FFFFFF;
---secondary-_states-hover: #9C27B00A;
---secondary-_states-selected: #9C27B014;
---secondary-_states-focus: #9C27B01E;
---secondary-_states-focusvisible: #9C27B04C;
---secondary-_states-outlinedborder: #9C27B07F;
---action-active: var(--grey-900);
---action-hover: var(--lightblue-50);
---action-selected: #00000014;
---action-focus: var(--lightblue-50);
---action-disabled: var(--grey-a200);
---action-disabledbackground: var(--grey-100);
---action-disabledborder: var(--grey-400);
---error-main: var(--red-700);
---error-dark: var(--red-800);
---error-light: var(--red-400);
---error-contrast: #FFFFFF;
---error-_states-hover: #D32F2F0A;
---error-_states-selected: #D32F2F14;
---error-_states-focusvisible: #D32F2F4C;
---error-_states-outlinedborder: #D32F2F7F;
---warning-main: var(--orange-800);
---warning-dark: var(--orange-900);
---warning-light: var(--orange-500);
---warning-contrast: #FFFFFF;
---warning-_states-hover: #EF6C000A;
---warning-_states-selected: #EF6C0014;
---warning-_states-focusvisible: #EF6C004C;
---warning-_states-outlinedborder: #EF6C007F;
---info-main: var(--lightblue-700);
---info-dark: var(--lightblue-900);
---info-light: var(--lightblue-500);
---info-contrast: #FFFFFF;
---info-_states-hover: #0288D10A;
---info-_states-selected: #0288D114;
---info-_states-focusvisible: #0288D14C;
---info-_states-outlinedborder: #0288D17F;
---success-main: var(--green-800);
---success-dark: var(--green-900);
---success-light: var(--green-500);
---success-contrast: #FFFFFF;
---success-_states-hover: #2E7D320A;
---success-_states-selected: #2E7D3214;
---success-_states-focusvisible: #2E7D324C;
---success-_states-outlinedborder: #2E7D327F;
---common-white_states-main: #FFFFFF;
---common-white_states-hover: #FFFFFF0A;
---common-white_states-selected: #FFFFFF14;
---common-white_states-focus: #FFFFFF1E;
---common-white_states-focusvisible: #FFFFFF4C;
---common-white_states-outlinedborder: #FFFFFF7F;
---common-black_states-main: #000000;
---common-black_states-hover: #0000000A;
---common-black_states-selected: #00000014;
---common-black_states-focus: #0000001E;
---common-black_states-focusvisible: #0000004C;
---common-black_states-outlinedborder: #0000007F;
---background-default: #FFFFFF;
---background-paper-elevation-0: #FFFFFF;
---background-paper-elevation-1: #FFFFFF;
---background-paper-elevation-2: #FFFFFF;
---background-paper-elevation-3: #FFFFFF;
---background-paper-elevation-4: #FFFFFF;
---background-paper-elevation-5: #FFFFFF;
---background-paper-elevation-6: #FFFFFF;
---background-paper-elevation-7: #FFFFFF;
---background-paper-elevation-8: #FFFFFF;
---background-paper-elevation-9: #FFFFFF;
---background-paper-elevation-10: #FFFFFF;
---background-paper-elevation-11: #FFFFFF;
---background-paper-elevation-12: #FFFFFF;
---background-paper-elevation-13: #FFFFFF;
---background-paper-elevation-14: #FFFFFF;
---background-paper-elevation-15: #FFFFFF;
---background-paper-elevation-16: #FFFFFF;
---background-paper-elevation-17: #FFFFFF;
---background-paper-elevation-18: #FFFFFF;
---background-paper-elevation-19: #FFFFFF;
---background-paper-elevation-20: #FFFFFF;
---background-paper-elevation-21: #FFFFFF;
---background-paper-elevation-22: #FFFFFF;
---background-paper-elevation-23: #FFFFFF;
---background-paper-elevation-24: #FFFFFF;
---elevation-outlined: #E0E0E0;
---divider: #0000001E;
---_components-switch-slidefill: #000000;
---_components-switch-knowfilldisabled: var(--grey-100);
---_components-switch-knobfillenabled: var(--grey-50);
---_components-alert-success-background: #EDF7ED;
---_components-alert-success-color: #1E4620;
---_components-alert-info-background: #E5F6FD;
---_components-alert-info-color: #014361;
---_components-alert-warning-background: #FFF4E5;
---_components-alert-warning-color: #663C00;
---_components-alert-error-background: #FDEDED;
---_components-alert-error-color: #5F2120;
---_components-chip-defaultfocusfill: #00000033;
---_components-chip-defaulthoverfill: #0000001E;
---_components-chip-defaultclosefill: #000000;
---_components-chip-defaultenabledborder: var(--grey-400);
---_components-backdrop-fill: #0000007F;
---_components-tooltip-fill: #616161E5;
---_components-snackbar-fill: #323232;
---_components-rating-activefill: #FFB400;
---_components-rating-enabledborder: #0000003A;
---_components-input-filled-hoverfill: #00000016;
---_components-input-filled-enabledfill: #0000000F;
---_components-input-outlined-hoverborder: #000000;
---_components-input-outlined-enabledborder: #0000003A;
---_components-input-standard-hoverborder: var(--grey-600);
---_components-input-standard-enabledborder: var(--grey-500);
---_components-appbar-defaultfill: var(--grey-100);
---_components-stepper-connector: var(--grey-400);
---_components-breadcrumbs-collapsefill: var(--grey-100);
---_components-avatar-fill: var(--grey-400);
---_native-scrollbar-bg: var(--grey-200);
+:root {
+  --text-primary: #000000;
+  --text-secondary: var(--grey-800);
+  --text-disabled: var(--grey-a200);
+  --primary-main: var(--blue-500);
+  --primary-dark: var(--blue-600);
+  --primary-light: var(--blue-400);
+  --primary-contrast: #ffffff;
+  --primary-_states-hover: var(--blue-50);
+  --primary-_states-selected: var(--blue-100);
+  --primary-_states-focus: var(--blue-50);
+  --primary-_states-focusvisible: var(--blue-50);
+  --primary-_states-outlinedborder: var(--blue-600);
+  --primary-_states-focusvisibleouterborder: var(--primary-main);
+  --primary-_states-focusvisibleinnerborder: var(--common-white_states-main);
+  --text-_states-hover: #0000000a;
+  --text-_states-selected: #00000014;
+  --text-_states-focus: #0000001e;
+  --text-_states-focusvisible: #0000004c;
+  --secondary-main: var(--purple-500);
+  --secondary-dark: var(--purple-700);
+  --secondary-light: var(--purple-300);
+  --secondary-contrast: #ffffff;
+  --secondary-_states-hover: #9c27b00a;
+  --secondary-_states-selected: #9c27b014;
+  --secondary-_states-focus: #9c27b01e;
+  --secondary-_states-focusvisible: #9c27b04c;
+  --secondary-_states-outlinedborder: #9c27b07f;
+  --action-active: var(--grey-900);
+  --action-hover: var(--lightblue-50);
+  --action-selected: #00000014;
+  --action-focus: var(--lightblue-50);
+  --action-disabled: var(--grey-a200);
+  --action-disabledbackground: var(--grey-100);
+  --action-disabledborder: var(--grey-400);
+  --error-main: var(--red-700);
+  --error-dark: var(--red-800);
+  --error-light: var(--red-400);
+  --error-contrast: #ffffff;
+  --error-_states-hover: #d32f2f0a;
+  --error-_states-selected: #d32f2f14;
+  --error-_states-focusvisible: #d32f2f4c;
+  --error-_states-outlinedborder: #d32f2f7f;
+  --warning-main: var(--orange-800);
+  --warning-dark: var(--orange-900);
+  --warning-light: var(--orange-500);
+  --warning-contrast: #ffffff;
+  --warning-_states-hover: #ef6c000a;
+  --warning-_states-selected: #ef6c0014;
+  --warning-_states-focusvisible: #ef6c004c;
+  --warning-_states-outlinedborder: #ef6c007f;
+  --info-main: var(--lightblue-700);
+  --info-dark: var(--lightblue-900);
+  --info-light: var(--lightblue-500);
+  --info-contrast: #ffffff;
+  --info-_states-hover: #0288d10a;
+  --info-_states-selected: #0288d114;
+  --info-_states-focusvisible: #0288d14c;
+  --info-_states-outlinedborder: #0288d17f;
+  --success-main: var(--green-800);
+  --success-dark: var(--green-900);
+  --success-light: var(--green-500);
+  --success-contrast: #ffffff;
+  --success-_states-hover: #2e7d320a;
+  --success-_states-selected: #2e7d3214;
+  --success-_states-focusvisible: #2e7d324c;
+  --success-_states-outlinedborder: #2e7d327f;
+  --common-white_states-main: #ffffff;
+  --common-white_states-hover: #ffffff0a;
+  --common-white_states-selected: #ffffff14;
+  --common-white_states-focus: #ffffff1e;
+  --common-white_states-focusvisible: #ffffff4c;
+  --common-white_states-outlinedborder: #ffffff7f;
+  --common-black_states-main: #000000;
+  --common-black_states-hover: #0000000a;
+  --common-black_states-selected: #00000014;
+  --common-black_states-focus: #0000001e;
+  --common-black_states-focusvisible: #0000004c;
+  --common-black_states-outlinedborder: #0000007f;
+  --background-default: #ffffff;
+  --background-paper-elevation-0: #ffffff;
+  --background-paper-elevation-1: #ffffff;
+  --background-paper-elevation-2: #ffffff;
+  --background-paper-elevation-3: #ffffff;
+  --background-paper-elevation-4: #ffffff;
+  --background-paper-elevation-5: #ffffff;
+  --background-paper-elevation-6: #ffffff;
+  --background-paper-elevation-7: #ffffff;
+  --background-paper-elevation-8: #ffffff;
+  --background-paper-elevation-9: #ffffff;
+  --background-paper-elevation-10: #ffffff;
+  --background-paper-elevation-11: #ffffff;
+  --background-paper-elevation-12: #ffffff;
+  --background-paper-elevation-13: #ffffff;
+  --background-paper-elevation-14: #ffffff;
+  --background-paper-elevation-15: #ffffff;
+  --background-paper-elevation-16: #ffffff;
+  --background-paper-elevation-17: #ffffff;
+  --background-paper-elevation-18: #ffffff;
+  --background-paper-elevation-19: #ffffff;
+  --background-paper-elevation-20: #ffffff;
+  --background-paper-elevation-21: #ffffff;
+  --background-paper-elevation-22: #ffffff;
+  --background-paper-elevation-23: #ffffff;
+  --background-paper-elevation-24: #ffffff;
+  --elevation-outlined: #e0e0e0;
+  --divider: #0000001e;
+  --_components-switch-slidefill: #000000;
+  --_components-switch-knowfilldisabled: var(--grey-100);
+  --_components-switch-knobfillenabled: var(--grey-50);
+  --_components-alert-success-background: #edf7ed;
+  --_components-alert-success-color: #1e4620;
+  --_components-alert-info-background: #e5f6fd;
+  --_components-alert-info-color: #014361;
+  --_components-alert-warning-background: #fff4e5;
+  --_components-alert-warning-color: #663c00;
+  --_components-alert-error-background: #fdeded;
+  --_components-alert-error-color: #5f2120;
+  --_components-chip-defaultfocusfill: #00000033;
+  --_components-chip-defaulthoverfill: #0000001e;
+  --_components-chip-defaultclosefill: #000000;
+  --_components-chip-defaultenabledborder: var(--grey-400);
+  --_components-backdrop-fill: #0000007f;
+  --_components-tooltip-fill: #616161e5;
+  --_components-snackbar-fill: #323232;
+  --_components-rating-activefill: #ffb400;
+  --_components-rating-enabledborder: #0000003a;
+  --_components-input-filled-hoverfill: #00000016;
+  --_components-input-filled-enabledfill: #0000000f;
+  --_components-input-outlined-hoverborder: #000000;
+  --_components-input-outlined-enabledborder: #0000003a;
+  --_components-input-standard-hoverborder: var(--grey-600);
+  --_components-input-standard-enabledborder: var(--grey-500);
+  --_components-appbar-defaultfill: var(--grey-100);
+  --_components-stepper-connector: var(--grey-400);
+  --_components-breadcrumbs-collapsefill: var(--grey-100);
+  --_components-avatar-fill: var(--grey-400);
+  --_native-scrollbar-bg: var(--grey-200);
 }
-
